# purelybi

./: .gitignore  AGENTS.md  README.md
backend/: .env-example  AGENTS.md  README.md  main.py  pyproject.toml  startup.sh
backend/docs/: ui_flows.md
backend/docs/fast_api/: auth.md  chat.md  dashboards.md  metadata.md
backend/fastapi_app/: app.py  settings.py
backend/fastapi_app/middleware/: __init__.py
backend/fastapi_app/models/: __init__.py  auth.py  chat.py
backend/fastapi_app/onboarding/: __init__.py  agent_factory.py  azure_job_runner.py  context.py  docker_ops.py  llm.py  oauth_backend.py  stores.py  streaming.py  tools.py
backend/fastapi_app/routers/: auth.py  chat.py  dashboards.py  onboarding.py  templates.py
backend/fastapi_app/services/: auth_service.py  chat_service.py  dashboard_service.py  template_service.py  widget_data_service.py
backend/notebooks/: test_streaming.ipynb
backend/scripts/: seed_users.py
backend/sql-agent/: README.md
backend/sql-agent/notebooks/: quickstart.ipynb  snowpark.ipynb  sql-agent.ipynb
backend/sql-agent/streamchat/: duckdb_sandbox.py  utils.py
backend/src/ai/: __init__.py  llms.py
backend/src/fastapi_app/: app.py  settings.py
backend/supabase/: SCHEMA.md
backend/supabase/queries/: 1-create-tables.sql  2-add-sync-schedule-columns.sql  3-sync-v2-columns.sql  4-incremental-sync.sql  (+4 more)
backend/tests/: perf_benchmark.py  test_filter_engine.py  test_incremental_sync_wiring.py  test_metadata_generator.py  test_metadata_service.py  test_widget_data_service_filters.py  test_widget_template_hydration.py
(+200 files in other folders)
